--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
-#vendor/
-#node_modules/
+vendor/
+node_modules/
 
 # Laravel 4 specific
-#bootstrap/compiled.php
-#app/storage/
+bootstrap/compiled.php
+app/storage/
 
 # Laravel 5 & Lumen specific
-#bootstrap/cache/
-#storage/
-#.env.*.php
-#.env.php
-#.env
-#.env.example
+bootstrap/cache/
+storage/
+.env.*.php
+.env.php
+.env
+.env.example
